...
                  child: Text(
                    t('file'),
                    style: Theme.of(context).textTheme.titleMedium,
                  ),
                ),
                TextButton.icon(
                  key: const Key('choose-files'),
                  onPressed: choose,
                  icon: const Icon(AltIcons.add, size: 20),
                  label: Text(t('addFiles')),
                ),
              ],
            ),
...
